--- a/css/header.css
+++ b/css/header.css
@@ -3,8 +3,25 @@
   float: right;
   padding: 5.5vh 60px 0 0;
 }
-.header-nav a:hover {
+.header-nav a:hover,
+.header-nav a:active {
   color: #ed6e2f;
+}
+.header-logo:hover,
+.header-logo:active {
+  opacity: 0.5;
+}
+.header-nav > li:first-child a {
+  color: #ed6e2f;
+}
+.header-nav > li:first-child a:hover {
+  color: #000;
+}
+.header-nav > li:last-child a {
+  color: wheat;
+}
+.header-nav > li:last-child a:hover {
+  color: rebeccapurple;
 }
 .header-nav > li {
   display: inline-block;
