--- a/css/main.css
+++ b/css/main.css
@@ -78,3 +78,10 @@ a {
 .bio-copy a {
   color: green;
 }
+h2 ~ p {
+  font-size: 0.8em;
+  font-style: italic;
+  margin: 1em auto 0;
+  max-width: 70%;
+  text-align: center;
+}
