--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ a {
 .full-hero {
   background-color: #c7dbfc;
   height: 50vh;
+  position: relative;
 }
 
 /* SOCIAL STYLES */
@@ -34,7 +35,10 @@ a {
 .social-list {
   list-style: none;
   padding: 0;
-  text-align: center;
+  right: 50%;
+  transform: translate(50%, 0);
+  position: absolute;
+  bottom: 10px;
 }
 .social-list > li {
   display: inline-block;
