--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,8 @@
 <head>
   <title>Test Page: Don't Panic</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/reset.css">
+  <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/header.css">
+  <link rel="stylesheet" href="/css/global.css">
 </head>
