--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,4 +5,5 @@
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="/css/header.css">
   <link rel="stylesheet" href="/css/global.css">
+  <link rel="stylesheet" href="/css/footer.css">
 </head>
