--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,22 @@
 /* GLOBAL STYLES */
 html {
   box-shadow: 0 0 0 30px #000 inset;
-  padding: 10vh 30px;
+  padding: 0 30px;
+}
+body {
+  font-family: helvetica, arial, sans;
+}
+h1 {
+  font-size: 7vw;
+  margin-top: 0;
+}
+a {
+  color: #f00;
+}
+h2 ~ p {
+  font-size: 0.8em;
+  font-style: italic;
+  margin: 1em auto 0;
+  max-width: 70%;
+  text-align: center;
 }
