--- a/css/header.css
+++ b/css/header.css
@@ -1,19 +1,16 @@
-/* HEADER STYLES */
 .header {
   background-color: #000;
   color: #fff;
   position: fixed;
-  top: 0px;
-  z-index: 100;
-  height: 10vh;
   width: 100%;
+  z-index: 20;
 }
 .header-logo {
   background-color: #000;
   box-sizing: border-box;
-  left: -30px;
   display: block;
   height: 10vh;
+  left: -30px;
   padding-top: 10px;
   position: relative;
   text-align: center;
@@ -40,13 +37,15 @@
 }
 .header-nav a {
   color: #fff;
+}
+.nav-links a {
   font-size: 0.8rem;
   font-weight: bold;
   text-decoration: none;
   text-transform: uppercase;
 }
-.header-nav a:hover,
-.header-nav a:active {
+.nav-links a:hover,
+.nav-links a:active  {
   color: #ed6e2f;
 }
 .header-nav > li:first-child a {
