--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,15 @@
-/* GLOBAL STYLES */
-h1 {
-  font-size: 7vw;
-  margin-top: 0;
-}
-a {
-  color: #f00;
-}
-
 /* HERO STYLES */
 .full-hero {
   background-color: #c7dbfc;
   height: 50vh;
-  position: relative;
 }
 
 /* SOCIAL STYLES */
+.social-list {
+  list-style: none;
+  padding: 0;
+  text-align: center;
+}
 .social-link {
   background: rgba(150, 150, 150, 0.5);
   border-radius: 99px;
@@ -31,14 +26,6 @@ a {
   text-decoration: none;
   vertical-align: middle;
   width: 2.5em;
-}
-.social-list {
-  list-style: none;
-  padding: 0;
-  right: 50%;
-  transform: translate(50%, 0);
-  position: absolute;
-  bottom: 10px;
 }
 .social-list > li {
   display: inline-block;
@@ -58,7 +45,7 @@ a {
   float: left;
   font-size: 1rem;
   margin: 40px 1% 0;
-  padding: 0 2% 2%;
+  padding: 2%;
   width: 23%;
 }
 .bio-box h3 {
@@ -66,7 +53,6 @@ a {
   font-size: 1.5em;
   margin: -40px 0 1em;
   text-align: center;
-  line-height: 1.5;
 }
 .bio-box img {
   width: 100%;
@@ -77,15 +63,7 @@ a {
 }
 .bio-copy {
   font-size: 1em;
-  line-height: 1.5;
 }
 .bio-copy a {
   color: green;
-}
-h2 ~ p {
-  font-size: 0.8em;
-  font-style: italic;
-  margin: 1em auto 0;
-  max-width: 70%;
-  text-align: center;
 }
